# SnakeCPP

./: .gitignore  README.md
SnakeCPP/: CMakeLists.txt  main.cpp
SnakeCPP/Base/Constants/: Constants.hpp
SnakeCPP/Base/Controlers/GameController/: GameController.cpp
SnakeCPP/Base/Controllers/GameController/: GameController.cpp  GameController.hpp
SnakeCPP/Base/Controllers/Renderer/Common/: Renderer.hpp
SnakeCPP/Base/Controllers/Renderer/MockRenderer/: MockRenderer.hpp
SnakeCPP/Base/Controllers/Renderer/WindowRenderer/: WindowRenderer.cpp  WindowRenderer.hpp
SnakeCPP/Base/Window/: Window.cpp  Window.hpp
SnakeCPP/GameObjects/Common/: GameObject.hpp
SnakeCPP/GameObjects/Fruit/: Fruit.cpp  Fruit.hpp
SnakeCPP/GameObjects/Snake/: Snake.cpp  Snake.hpp
Tests/: CMakeLists.txt  tests.cpp
Tests/Controllers/: TestGameController.cpp
Tests/GameObjects/: TestFruit.cpp  TestSnake.cpp
Tests/googletest/: CMakeLists.txt
docs/: index_classes.md  index_code.md  index_compile.md  index_files.md
docs/Classes/: class_fruit.md  class_game_controller.md  class_game_object.md  class_mock_renderer.md  class_renderer.md  class_snake.md  class_window.md  class_window_renderer.md  struct_game_object_1_1pair_hash.md
docs/Files/: _constants_8hpp.md  _fruit_8cpp.md  _fruit_8hpp.md  _game_controller_8cpp.md  _game_controller_8hpp.md  _game_object_8hpp.md  _mock_renderer_8hpp.md  _renderer_8hpp.md  _snake_8cpp.md  _snake_8hpp.md  _window_8cpp.md  _window_8hpp.md  _window_renderer_8cpp.md  _window_renderer_8hpp.md  dir_019d7bb7361f9aa3b48f96cc632e1810.md  dir_10576ba775745039d06743898feddff4.md  dir_127f14ceeca55b1549f6998798c00075.md  dir_1a027fa2dd96d864c196e28bbc787442.md  dir_5bba8319a318abaf0ee81281984437ca.md  dir_628593db0cdce5a76fb85526ae5aa762.md  dir_9ad26013570ca9f2c18cbcc133d459c5.md  dir_cc80b36fd00ca1b58eb3acc4f2117ba9.md  dir_d43acb0eca89dcd76dfd506cf0dbcdce.md  dir_dbfe116202b1600769614f98728cbd53.md  dir_e4bcdd67661a16ee0a7150dd15507aac.md  dir_f05d757c7f0d97265c933b6eac78353c.md  dir_f63da396db89d5751ceadc1deaf39b48.md  main_8cpp.md
